--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "framer-motion": "^11.13.1",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.453.0",
+    "marked": "^15.0.6",
     "memorystore": "^1.6.7",
     "openai": "^4.78.1",
     "passport": "^0.7.0",
